--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   --pozadina: #F4F3F2;
   --bela: #ffffff;
   --text: #333333;
+  --svetlo: #707070;
   --dark: #ffffffaa;
   --crna: #1C1C1C;  
   --zuta: #FFA90A;
@@ -44,9 +45,29 @@ body {
   --hover: #af0b0b;
   --plava:#1f2470;  
   --sivlj:#333333;
-  --back:#000000b3;
+  --back:#000000b3;  
+  --hero: linear-gradient(135deg, #1c1c1c, #383838);
   --gradient: linear-gradient(135deg, #de201d, #86201e);
   --gradient2: linear-gradient(135deg, #de201d, #86201e, #000000);
+}
+body.dark-mode {
+  --hero: #fff;
+  --isto: #333;
+  --pozadina: #313131;
+  --text: #ffffff;
+  --bela: #333333;
+  --crna: #f1f1f1;
+  --siv: #e6e6e6;
+  --siva: #dfdfdf;
+  --plava: var(--siva)
+}
+#theme-toggle {
+  background: transparent;
+  font-size: 16px;
+  border: none;
+  padding: 12px 35px;
+  cursor: pointer;
+  transition: 0.3s;
 }
 /* Reused stilovi */
 li { list-style: none; }
@@ -81,7 +102,7 @@ section {
   background: linear-gradient(to bottom, var(--crvena) 50%, transparent 50%);
   -webkit-background-clip: text;
   background-clip: text;
-  text-shadow: 2px 2px 0 #fff, 3px 3px 0 var(--crvena);
+  text-shadow: 2px 2px 0 var(--bela), 3px 3px 0 var(--crvena);
 }
 .underline { 
   position: relative; 
@@ -121,7 +142,7 @@ header ul li a {
   display: flex;
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--bela);
+  color: #fff;
   padding: 10px 20px;
   transition: 0.3s;
 }
@@ -132,7 +153,7 @@ header ul li a:hover {
 header .btn {
   background-image: var(--gradient2);
   background-size: 200%;
-  color: var(--bela);
+  color: #fff;
   padding: 10px 20px;
   margin-left: 5px;
   font-weight: 700;
@@ -145,7 +166,7 @@ header .btn ion-icon{
   font-size: 23px;
 }
 header .btn:is(:hover, :focus) { 
-  color: var(--bela);
+  color: #fff;
   background-position: right;
 }
 .logo {
@@ -154,7 +175,7 @@ header .btn:is(:hover, :focus) {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 3rem;
   font-weight: 700;
-  color: var(--bela);
+  color: #fff;
   transition: 0.3s;
 }
 .logo:hover {
@@ -170,17 +191,11 @@ header .btn:is(:hover, :focus) {
 .logo:hover img {
   transform: rotate(360deg);
 }
-/* Header aktivan */
-header.active {
-  transition-delay: 0.3s;
-  background: var(--pozadina);
-  padding: 10px 150px 10px 150px;
-}
 header.active .btn {
-  color: var(--bela);
+  color: #fff;
 }
 header.active .btn:hover{
-  color: var(--bela);
+  color: #fff;
 }
 .logo.active {
   color: var(--crna);
@@ -196,7 +211,7 @@ header.active ul li a:hover {
 .hero {
   display: grid;
   place-items: center;
-  background-image: url("images/hero-bg.png"), url("images/hero-bg-bottom.png"), linear-gradient(135deg, #1c1c1c, #383838);
+  background-image: url("images/hero-bg.png"), url("images/hero-bg-bottom.png"), var(--hero);
   background-size: cover, contain, cover;
   background-position: center top, center bottom, center;
   background-repeat: no-repeat, no-repeat, no-repeat;  
@@ -224,7 +239,7 @@ header.active ul li a:hover {
   margin-block-end: 15px;
 }
 .hero h1 {
-  color: var(--bela);
+  color: #fff;
   font-size: 3.6rem;
   line-height: 45px;
   margin-block-end: 20px;
@@ -237,7 +252,7 @@ header.active ul li a:hover {
 .hero .btn {
   display: flex;
   align-items: center;
-  color: var(--bela);
+  color: #fff;
   background: transparent;
   padding: 0;
   font-weight: 500;
@@ -248,6 +263,7 @@ header.active ul li a:hover {
 .hero .btn ion-icon {
   font-size: 20px;
   border-radius: 50%;
+  color: #fff;
   border: 2px solid var(--crvena);
   padding: 8px;
   margin-left: 4%;
@@ -261,7 +277,7 @@ header.active ul li a:hover {
   transform: rotate(-360deg) scale(1.05);
   background: var(--crvena);
   border-color: transparent;
-  color: white;
+  color: #fff;
   margin-left: 6px;
 }
 .hero .banner {
@@ -324,16 +340,17 @@ header.active ul li a:hover {
   transform: translateY(20px);
   animation: fadeInUp 0.7s ease-out forwards;
   text-align: center;
-  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
+  box-shadow: 0 6px 25px 2px rgba(0, 0, 0, 0.05);
   border-radius: 12px;
 }
 .about ul li h1 {
-  color: var(--plava);
   font-size: 3.8rem;
   font-weight: 700;
+  color: var(--plava);
 }
 .about ul li p {
   margin-bottom: 10px;
+  color: var(--plava);
 }
 .about ul li:nth-child(1) {
   animation-delay: 0.3s;
@@ -391,8 +408,8 @@ header.active ul li a:hover {
 }
 .usluge .card {
   padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
+  border-radius: 12px;
+  box-shadow: 0 6px 25px 2px rgba(100, 100, 100, 0.1);
   transition: transform 0.4s, box-shadow 0.4s;
   opacity: 0;
   transform: scale(0.9);
@@ -400,7 +417,7 @@ header.active ul li a:hover {
 }
 .usluge .card:hover {
   transform: translateY(-8px);
-  box-shadow: 0 12px 30px rgba(81, 85, 138, 0.2);
+  box-shadow: 0 6px 25px 2px rgba(100, 100, 100, 0.2);
 }
 .usluge .card-header {
   display: flex;
@@ -429,7 +446,7 @@ header.active ul li a:hover {
 }
 .usluge .card p {
   margin-bottom: 15px;
-  color: #333;
+  color: var(--siv);
 }
 .usluge .card a {
   color: var(--crvena);
@@ -492,11 +509,11 @@ header.active ul li a:hover {
   position: absolute;
   top: 10px;
   left: 10px;
-  background: rgba(0, 0, 0, 0.6); /* Malo tamnije za čitljivost */
+  background: rgba(0, 0, 0, 0.6);
   color: #fff;
   padding: 6px 16px;
   border-radius: 20px;
-  font-size: 1.1rem; /* Povećana veličina */
+  font-size: 1.1rem;
   font-weight: 600;
   letter-spacing: 0.5px;
 }
@@ -541,7 +558,7 @@ header.active ul li a:hover {
 }
 .testimonial .container {
   background-color: var(--pozadina);
-  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.2);
+  box-shadow: 0 6px 25px 2px rgba(0, 0, 0, 0.1);
   padding: 20px;
   display: flex;
   flex-direction: row;
@@ -592,7 +609,7 @@ header.active ul li a:hover {
   flex-direction: column;
   flex: 1;
   padding-left: 30px;
-  color: #222;
+  color: var(--text);
 }
 .testimonial-header {
   display: flex;
@@ -605,7 +622,7 @@ header.active ul li a:hover {
   height: 50px;
 }
 .testimonial-title {
-  color: #000;
+  color: var(--crna);
   font-weight: bold;
   font-size: 20px;
 }
@@ -705,9 +722,10 @@ header.active ul li a:hover {
   display: grid;
   justify-content: space-between;
   grid-template-columns: 0.75fr 1fr;
+  background-color: var(--pozadina);
   gap: 20px;
   padding: 20px;
-  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.2);
+  box-shadow: 0 6px 25px 2px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
 }
 .blog .banner img{
@@ -763,20 +781,21 @@ header.active ul li a:hover {
   display: flex;
   align-items: center;
   gap: 8px;
+  background-color: transparent;
 }
 .blog #view{
   background-image: var(--gradient2);
   background-size: 200%;
-  color: var(--bela);
+  color: #fff;
   margin: 2% auto;
   font-weight: 700;
-  padding: 10px 20px;
-  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
+  padding: 12px 35px;
+  box-shadow: 0 6px 25px 2px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   transition: 0.3s;
 }
 .blog #view:is(:hover, :focus) { 
-  color: var(--bela);
+  color: #fff;
   transform: translateY(1px);
   background-position: right;
 }
@@ -785,9 +804,14 @@ header.active ul li a:hover {
   display: flex;
   flex-direction: column;  
   height: 100vh;
+
 }
 form{
-  width: 1200px;
+  width: 1200px;  
+  background-color: var(--pozadina);
+  box-shadow: 0 6px 25px 2px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  border-radius: 12px;
 }
 .contact-form h1{
   color: #000;
@@ -810,9 +834,8 @@ form{
   padding: 10px;
   background-color: transparent;
   border: 1px solid #33333333;
-  color: #333;
+  color: var(--text);
   border-radius: 10px;
-  margin-top: 5px;
   font-size: 14px;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
@@ -824,7 +847,7 @@ form{
 }
 .contact-form .form-group input::placeholder,
 .contact-form .form-group textarea::placeholder {
-  color: #33333380;
+  color: var(--svetlo);
   opacity: 0.5;
 }
 .contact-form .form-group textarea{
@@ -832,14 +855,13 @@ form{
   resize: vertical;
 }
 .contact-form .form-group label {
-  color: #000;
+  color: var(--crna);
   display: block;
   font-weight: 600;
 }
 .contact-form .radio-group {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 10px 20px;
   align-items: center;
   justify-items: start;
 }
@@ -853,7 +875,7 @@ form{
   text-align: left;
   margin-top: 10px;
 }
-.contact-form .radio-group input[type="radio"] {
+.contact-form .radio-group input[type="checkbox"] {
   accent-color: #de201d;
   cursor: pointer;
   margin: 0;
@@ -864,14 +886,14 @@ form{
   width: 100%;
   background-image: linear-gradient(135deg, #de201d, #86201e, #000000);
   background-size: 200%;
-  color: var(--bela);
+  color: #fff;
   padding: 12px 35px;
   font-weight: 700;
   border-radius: 5px 25px;
   transition: 0.3s;
 }
 .contact-form button:hover {
-  color: var(--bela);
+  color: #fff;
   background-position: right;
 }
 
@@ -923,7 +945,7 @@ form{
 .footer {
   display: flex;
   flex-direction: column;
-  background-color: #1c1c1c;
+  background-color: #313131;
   background-image: url("images/footer-bg.png");
   color: #fff;
   padding: 60px 0 0 0;
@@ -993,7 +1015,7 @@ form{
 }
 .contact a, .contact p{
   font-size: 1.4rem;
-  color: var(--bela);
+  color: #fff;
   margin-bottom: 10px;
   display: flex;
   align-items: center;
